libs/config/tests/errors/arrays/source.hpp
not_array[] = "hello";
array = {1,2,3};
